# projscan

./: .gitignore  README.md  pyproject.toml
src/projscan/: __init__.py  cli.py  git.py  render.py  uv.py
tests/: test_cli.py  test_git.py  test_render.py  test_uv.py
